Fix scrollbar for chrome
Chrome doesn't care about css scrollbar-width setting

--- a/src/components/privacyStatement/privacyStatement.scss
+++ b/src/components/privacyStatement/privacyStatement.scss
@@ -1,5 +1,10 @@
 @import "./../../global.scss";
 
+body ::-webkit-scrollbar {
+  display: none;
+  width: 0;
+}
+
 .privacyStatementContainer {
   width: 100%;
   height: 100%;
